update swagger
- update swagger.json

- regen the swagger server

- combine block@height & block/hash

- remove all @ symbal
