# swagger-ui/swagger.json
@@ -25,16 +25,16 @@
         }
       }
     },
-    "/block/{hash}": {
+    "/block/{hash_or_height}": {
       "get": {
         "description": "get the block by hash",
         "parameters": [
           {
-            "name": "hash",
+            "name": "hash_or_height",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "hash of the block"
+            "description": "hash or height of the block"
           }
         ],
         "responses": {
@@ -44,35 +44,6 @@
               "type": "object",
               "properties": {
               }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "schema": {
-              "type": "string",
-              "description": "error text"
-            }
-          }
-        }
-      }
-    },
-    "/block@{height}": {
-      "get": {
-        "description": "get the block by height",
-        "parameters": [
-          {
-            "name": "height",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "description": "height of the block"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "object"
             }
           },
           "400": {
@@ -156,7 +127,7 @@
         }
       }
     },
-    "/account@{num}": {
+    "/account/{num}": {
       "get": {
         "description": "get the detail of one account",
         "parameters": [
@@ -182,7 +153,7 @@
         }
       }
     },
-    "/account@{num}/balance": {
+    "/account/{num}/balance": {
       "get": {
         "description": "get the balance of one account",
         "parameters": [
